# test-driven-ai-examples

./: .gitignore  LICENSE  README.md
rag-in-a-day/: Dockerfile  README.md  app.py  app_test.py  pyproject.toml
rag-in-a-day/lib/: README.md  llama_utils.py  llama_utils_test.py  model.py  watsonx_llm.py  watsonx_llm_test.py
rag-in-a-day/tests/: app_test.py
